--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <section class="first-section">
         <div class="first-left-width">
             <h1>Conmebol Copa America 2021</h1>
+            <button>
+                <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live</a>
+
+            </button>
         </div>
         <div class="first-right-width">
             <img src="images/banner.png">
