--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/5576419826.js" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Style Sheet -->
@@ -15,16 +19,15 @@
     <!--First Section-->
     <section class="first-section">
         <div class="first-left-width">
-            <h1>Conmebol Copa America 2021</h1>
+            <h1>Conmebol<br>Copa America<br>2021</h1>
             <button>
-                <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live</a>
-
+                <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live<i
+                        class="fas fa-arrow-right"></i></a>
             </button>
         </div>
         <div class="first-right-width">
             <img src="images/banner.png">
         </div>
-
     </section>
 </body>
 
