--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <img src="images/banner.png">
         </div>
     </section>
+    <!-- First Section -->
+
+
+    <!-- Second Section -->
+
+    <!-- Second Section -->
 </body>
 
 </html>
