--- a/index.html
+++ b/index.html
@@ -34,6 +34,54 @@
 
     <!-- Second Section -->
 
+    <section class="second-section">
+        <div class="box-width">
+            <div class="player-image">
+                <img class="image-width" src="images/players/player-1.png">
+                <h3 class="player-name">Neymar Jr</h3>
+                <p class="player-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam
+                    blanditiis est alias natus, officiis mollitia commodi, porro pariatur sit quaerat doloremque et
+                    corporis deleniti distinctio odio quisquam! Possimus, sint?</p>
+
+            </div>
+            <div class="player-image">
+                <img class="image-width" src="images/players/player-2.png">
+                <h3 class="player-name">Lionel Messi</h3>
+                <p class="player-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam
+                    blanditiis est alias natus, officiis mollitia commodi, porro pariatur sit quaerat doloremque et
+                    corporis deleniti distinctio odio quisquam! Possimus, sint?</p>
+
+            </div>
+            <div class="player-image">
+                <img class="image-width" src="images/players/player-3.png">
+                <h3 class="player-name">Critiano Ronaldo</h3>
+                <p class="player-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam
+                    blanditiis est alias natus, officiis mollitia commodi, porro pariatur sit quaerat doloremque et
+                    corporis deleniti distinctio odio quisquam! Possimus, sint?</p>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Second Section -->
 </body>
 
