--- a/index.html
+++ b/index.html
@@ -16,157 +16,192 @@
 </head>
 
 <body>
-    <!--First Section-->
-    <section class="first-section">
-        <div class="first-left-width">
-            <h1>Conmebol<br>Copa America<br>2021</h1>
-            <button>
-                <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live<i
-                        class="fas fa-arrow-right"></i></a>
-            </button>
-        </div>
-        <div class="first-right-width">
-            <img src="images/banner.png">
-        </div>
-    </section>
-    <!-- First Section -->
-
-
-    <!-- Second Section -->
-
-    <section class="second-section">
-        <div class="box-width">
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-1.png">
-                <h3 class="player-name">Neymar Jr</h3>
-                <p class="player-info">Neymar Júnior(born 5 February 1992),known as Neymar,is a
-                    Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and
-                    the Brazil national team. He is widely regarded as one of the best players in the world.</p>
-
+    <main>
+        <!--First Section-->
+        <section class="first-section">
+            <div class="first-left-width">
+                <h1>Conmebol<br>Copa America<br>2021</h1>
+                <button>
+                    <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live<i
+                            class="fas fa-arrow-right"></i></a>
+                </button>
             </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-2.png">
-                <h3 class="player-name">Lionel Messi</h3>
-                <p class="player-info">Luis Lionel Andrés Messi also known as Leo Messi,(born 24 June 1987) is an
-                    Argentine
-                    professional footballer who plays as a forward or an attacking midfielder and captains the Argentina
-                    national team.</p>
-
+            <div class="first-right-width">
+                <img src="images/banner.png">
             </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-3.png">
-                <h3 class="player-name">Critiano Ronaldo</h3>
-                <p class="player-info">Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation:
-                    [kɾiʃˈtjɐnu ʁɔˈnaɫdu]; born 5 February 1985) is a Portuguese professional footballer who plays as a
-                    forward for Serie A club Juventus and captains the Portugal national team.</p>
-
-            </div>
-
-        </div>
-
-    </section>
-    <!-- Second Section -->
+        </section>
+        <!-- First Section -->
 
 
-    <!-- Third Section -->
+        <!-- Second Section -->
 
-    <section class="third-section">
-        <div class="box-width">
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-4.png">
-                <h3 class="player-name">Paulo Dybala</h3>
-                <p class="player-info">Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional
-                    footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+        <section class="second-section">
+            <div class="box-width">
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-1.png">
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-info">Neymar Júnior(born 5 February 1992),known as Neymar,is a
+                        Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain
+                        and
+                        the Brazil national team. He is widely regarded as one of the best players in the world.</p>
 
-            </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-5.png">
-                <h3 class="player-name">Mesut Ozil</h3>
-                <p class="player-info">Mesut Özil is a German professional footballer who plays
-                    as an attacking midfielder for German team.Nicknamed "The Assist King",Özil is known for his
-                    technical
-                    skills,creativity,agility,and finesse.He has also played as a wide midfielder in his career.
-                </p>
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-2.png">
+                    <h3 class="player-name">Lionel Messi</h3>
+                    <p class="player-info">Luis Lionel Andrés Messi also known as Leo Messi,(born 24 June 1987) is an
+                        Argentine
+                        professional footballer who plays as a forward or an attacking midfielder and captains the
+                        Argentina
+                        national team.</p>
 
-            </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-6.png">
-                <h3 class="player-name">Mauro Icardi</h3>
-                <p class="player-info">Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19
-                    February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris
-                    Saint-Germain and the Argentina national team.</p>
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-3.png">
+                    <h3 class="player-name">Critiano Ronaldo</h3>
+                    <p class="player-info">Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation:
+                        [kɾiʃˈtjɐnu ʁɔˈnaɫdu]; born 5 February 1985) is a Portuguese professional footballer who plays
+                        as a
+                        forward for Serie A club Juventus and captains the Portugal national team.</p>
+
+                </div>
 
             </div>
 
-        </div>
-    </section>
-    <!-- Third Section -->
+        </section>
+        <!-- Second Section -->
 
 
-    <!-- Fourth Section -->
-    <section class="fourth-section">
-        <div class="box-width">
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-7.png">
-                <h3 class="player-name">Di Maria</h3>
-                <p class="player-info">Ángel Fabián Di María (born 14 February 1988) is an Argentine professional
-                    footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can
-                    play as either a winger or attacking midfielder.</p>
+        <!-- Third Section -->
 
-            </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-8.png">
-                <h3 class="player-name">Kylian Mbappe</h3>
-                <p class="player-info">Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer
-                    who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+        <section class="third-section">
+            <div class="box-width">
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-4.png">
+                    <h3 class="player-name">Paulo Dybala</h3>
+                    <p class="player-info">Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional
+                        footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
 
-            </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-9.png">
-                <h3 class="player-name">Mohammed Salah</h3>
-                <p class="player-info">Mohamed Salah is an Egyptian professional
-                    footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national
-                    team.Considered one of the best players in the world,he is known for his finishing,
-                    dribbling, and speed.</p>
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-5.png">
+                    <h3 class="player-name">Mesut Ozil</h3>
+                    <p class="player-info">Mesut Özil is a German professional footballer who plays
+                        as an attacking midfielder for German team.Nicknamed "The Assist King",Özil is known for his
+                        technical
+                        skills,creativity,agility,and finesse.He has also played as a wide midfielder in his career.
+                    </p>
 
-            </div>
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-6.png">
+                    <h3 class="player-name">Mauro Icardi</h3>
+                    <p class="player-info">Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born
+                        19
+                        February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club
+                        Paris
+                        Saint-Germain and the Argentina national team.</p>
 
-        </div>
-    </section>
-    <!-- Fourth Section -->
-
-    <!-- Fifth Section -->
-    <section class="fifth-section">
-        <div class="box-width">
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-10.png">
-                <h3 class="player-name">Harry Kane</h3>
-                <p class="player-info">Harry Kane is an English footballer
-                    who plays as a striker for Tottenham Hotspur and captains the England national
-                    team. Regarded as one of the best strikers in the world, Kane is known for his prolific goalscoring
-                    record and ability to link play.</p>
+                </div>
 
             </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-11.png">
-                <h3 class="player-name">Kevin De Bruyne</h3>
-                <p class="player-info">Kevin De Bruyne is a Belgian professional footballer who
-                    plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the
-                    Belgium national team.</p>
+        </section>
+        <!-- Third Section -->
+
+
+        <!-- Fourth Section -->
+        <section class="fourth-section">
+            <div class="box-width">
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-7.png">
+                    <h3 class="player-name">Di Maria</h3>
+                    <p class="player-info">Ángel Fabián Di María (born 14 February 1988) is an Argentine professional
+                        footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He
+                        can
+                        play as either a winger or attacking midfielder.</p>
+
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-8.png">
+                    <h3 class="player-name">Kylian Mbappe</h3>
+                    <p class="player-info">Kylian Mbappé Lottin (born 20 December 1998) is a French professional
+                        footballer
+                        who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-9.png">
+                    <h3 class="player-name">Mohammed Salah</h3>
+                    <p class="player-info">Mohamed Salah is an Egyptian professional
+                        footballer who plays as a forward for Premier League club Liverpool and captains the Egypt
+                        national
+                        team.Considered one of the best players in the world,he is known for his finishing,
+                        dribbling, and speed.</p>
+
+                </div>
 
             </div>
-            <div class="player-image">
-                <img class="image-width" src="images/players/player-12.png">
-                <h3 class="player-name">Philippe Coutinho</h3>
-                <p class="player-info">Philippe Coutinho is a Brazilian professional
-                    footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil
-                    national team.</p>
+        </section>
+        <!-- Fourth Section -->
+
+        <!-- Fifth Section -->
+        <section class="fifth-section">
+            <div class="box-width">
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-10.png">
+                    <h3 class="player-name">Harry Kane</h3>
+                    <p class="player-info">Harry Kane is an English footballer
+                        who plays as a striker for Tottenham Hotspur and captains the England national
+                        team. Regarded as one of the best strikers in the world, Kane is known for his prolific
+                        goalscoring
+                        record and ability to link play.</p>
+
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-11.png">
+                    <h3 class="player-name">Kevin De Bruyne</h3>
+                    <p class="player-info">Kevin De Bruyne is a Belgian professional footballer who
+                        plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the
+                        Belgium national team.</p>
+
+                </div>
+                <div class="player-image">
+                    <img class="image-width" src="images/players/player-12.png">
+                    <h3 class="player-name">Philippe Coutinho</h3>
+                    <p class="player-info">Philippe Coutinho is a Brazilian professional
+                        footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the
+                        Brazil
+                        national team.</p>
+
+                </div>
 
             </div>
+        </section>
+        <!-- Fifth Section -->
 
-        </div>
-    </section>
-    <!-- Fifth Section -->
+        <!-- Sixth Section -->
+
+        <footer>
+            <section class="sixth-section">
+                <div class="totall-width">
+                    <img src="images/Logo.png" alt="">
+                    <div class="icon">
+                        <i class="fab fa-instagram-square"></i>
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-twitter"></i>
+                    </div>
+
+                    <p class="copyright">copyright <i class="far fa-copyright"></i> 2022</p>
+
+                </div>
+            </section>
+        </footer>
+
+        <!-- Sixth Section -->
+
+    </main>
+
 </body>
 
 </html>
