--- a/index.html
+++ b/index.html
@@ -181,8 +181,61 @@
 
         <!-- Sixth Section -->
 
+
+        <section class="sixth-section">
+
+
+
+            <div class="video-box-width">
+                <div class="video-box">
+                    <video class="video-width" src="video/video-1.mp4" controls></video>
+                    <h3 class="video-title">Free Style Skill-1</h3>
+                    <p class="video-info">The art of freestyle football can be traced to games of Southeast Asia such as
+                        chinlone, jianzi and sepak takraw, which have been practised for 2,000 years.</p>
+                </div>
+
+                <div class="video-box">
+                    <video class="video-width" src="video/video-2.mp4" controls></video>
+                    <h3 class="video-title">Free Style Skill-2</h3>
+                    <p class="video-info">The art of freestyle football can be traced to games of Southeast Asia such as
+                        chinlone, jianzi and sepak takraw, which have been practised for 2,000 years.</p>
+                </div>
+                <div class="video-box">
+                    <video class="video-width" src="video/video-3.mp4" controls></video>
+                    <h3 class="video-title">Free Style Skill-3</h3>
+                    <p class="video-info">The art of freestyle football can be traced to games of Southeast Asia such as
+                        chinlone, jianzi and sepak takraw, which have been practised for 2,000 years.</p>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+        <!-- Sixth Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- Footer Section -->
+
         <footer>
-            <section class="sixth-section">
+            <section class="footer-section">
                 <div class="totall-width">
                     <img src="images/Logo.png" alt="">
                     <div class="icon">
@@ -198,7 +251,7 @@
             </section>
         </footer>
 
-        <!-- Sixth Section -->
+        <!-- Footer Section -->
 
     </main>
 
