--- a/index.html
+++ b/index.html
@@ -210,19 +210,36 @@
         </section>
 
 
-
-
-
-
-
-
-
         <!-- Sixth Section -->
 
 
+        <!-- Seven  Section-->
+        <section class="seven-section">
 
+            <div class="heading">
+                <h3>Create Account<br>And<br> Watch More Video</h3>
+            </div>
 
+            <div class="form">
+                <form action="">
 
+                    <p class="form-name">Name :<input class="form-2" type="text" name="name"
+                            placeholder="Enter your name" id=""></p>
+                    <p class="form-name">Email :<input class="form-2" type="text" name="name"
+                            placeholder="Enter your Email" id=""></p>
+                    <p class="form-name">Password :<input class="form-2" type="password" name="name"
+                            placeholder="Enter your Password" id=""></p>
+                    <p class="form-name">Re-Type Password :<input class="form-2" type="password" name="name"
+                            placeholder="Enter your Password " id="">
+                    </p>
+                    <button class="form-name" type="submit">Sign-Up</button>
+
+                </form>
+
+            </div>
+        </section>
+
+        <!-- Seven Section -->
 
 
 
