--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         <section class="first-section">
             <div class="first-left-width">
                 <h1>Conmebol<br>Copa America<br>2021</h1>
-                <button>
-                    <a class="link-button" target="_blank" href="https://copaamerica.com/en/organization/">Watch Live<i
-                            class="fas fa-arrow-right"></i></a>
-                </button>
+                <button type="submit">Watch Live<i class="fas fa-arrow-right"></i></button>
+
+
             </div>
             <div class="first-right-width">
                 <img src="images/banner.png">
@@ -212,7 +211,6 @@
 
         <!-- Sixth Section -->
 
-
         <!-- Seven  Section-->
         <section class="seven-section">
 
@@ -240,15 +238,6 @@
         </section>
 
         <!-- Seven Section -->
-
-
-
-
-
-
-
-
-
         <!-- Footer Section -->
 
         <footer>
